Add api for es instance health
